@@ -72,6 +72,12 @@
     <ClCompile Include="..\..\..\common\StringCompress.cpp">
       <Filter>common</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\..\common\System.cpp">
+      <Filter>common</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\common\TaskDispatch.cpp">
+      <Filter>common</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\..\common\RawImportMeta.hpp">
@@ -150,6 +156,12 @@
       <Filter>libuat</Filter>
     </ClInclude>
     <ClInclude Include="..\..\..\common\StringCompress.hpp">
+      <Filter>common</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\common\System.hpp">
+      <Filter>common</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\common\TaskDispatch.hpp">
       <Filter>common</Filter>
     </ClInclude>
   </ItemGroup>
