@@ -51,6 +51,7 @@ v0.5 (xxxx-xx-xx)
 - Multi-threaded compression in repack-lz4 utility.
 - Improved memory efficiency of small temporary allocations in various
   utilities.
+- Multi-threaded message matching in threadify utility.
 
 
 v0.4 (2017-07-19)
